[project]
name = "gemini-3-pro-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.21.0",
    "google-genai>=1.56.0",
]

[[tool.uv.index]]
url = "https://artifacts.dox.support/repository/python/simple"
default = true
